--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+  # App icon generator
+  flutter_launcher_icons: ^0.14.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,28 +74,51 @@ flutter:
   assets:
     - assets/images/Hand.png
     - assets/images/Write One Text.png
+    - assets/images/auth at glance.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  # Custom fonts
+  fonts:
+    - family: Migra
+      fonts:
+        - asset: assets/fonts/Migra-Extralight.ttf
+          weight: 200
+        - asset: assets/fonts/MigraItalic-ExtralightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/Migra-Extrabold.ttf
+          weight: 800
+        - asset: assets/fonts/MigraItalic-ExtraboldItalic.ttf
+          weight: 800
+          style: italic
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path_android: "assets/images/write one icon.png"  # fallback for legacy
+  image_path_ios: "assets/images/write one icon.png"      # iOS uses the full icon
+  adaptive_icon_background: "#0a1f29"                     # Your dark blue background
+  adaptive_icon_foreground: "assets/images/icon_fg.png"   # Your logo with transparent bg
+  adaptive_icon_monochrome: "assets/images/icon_mono.png" # For Android 13+ themed icons
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/images/write one icon.png"
+    background_color: "#0a1f29"
+    theme_color: "#0a1f29"
+  windows:
+    generate: true
+    image_path: "assets/images/write one icon.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/write one icon.png"
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
