--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,12 @@
 name: write_one
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: ^3.9.2
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -48,6 +28,19 @@ dependencies:
   
   # MongoDB for direct database access
   mongo_dart: ^0.9.3
+  
+  # Google Cloud Vision for OCR
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  
+  # Network and APIs
+  http: ^1.2.2
+  app_links: ^6.4.1
+  url_launcher: ^6.3.1
+  
+  # Storage and Preferences
+  shared_preferences: ^2.3.2
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +53,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_native_splash: ^2.4.1
-  
+
   # App icon generator
   flutter_launcher_icons: ^0.14.1
 
@@ -71,6 +64,7 @@ dev_dependencies:
 flutter:
 
   # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
@@ -79,11 +73,14 @@ flutter:
     - assets/images/Hand.png
     - assets/images/Write One Text.png
     - assets/images/auth at glance.png
+    - assets/images/Loading one.png
+    - assets/images/Write One Background Removed.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
 
   # Custom fonts
   fonts:
@@ -123,7 +120,7 @@ flutter_launcher_icons:
 flutter_native_splash:
   ios: true
   android: true
-  color: "#0a1f29"  # Dark blue background
-  image: "assets/images/Write One Background Removed.png"
-  color_dark: "#0a1f29"
-  image_dark: "assets/images/Write One Background Removed.png"
+  color: "#000000"  # Black background
+  image: "assets/images/Loading one.png"
+  color_dark: "#000000"
+  image_dark: "assets/images/Loading one.png"
