--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,23 +22,18 @@ dependencies:
   # Camera
   camera: ^0.10.6
   
-  # Image Picker (more reliable than photo_gallery)
+  # Image Picker and permissions
   image_picker: ^1.0.4
   permission_handler: ^11.0.1
   
   # MongoDB for direct database access
   mongo_dart: ^0.9.3
   
-  # Google Cloud Vision for OCR
-  googleapis: ^13.2.0
-  googleapis_auth: ^1.6.0
   
   # Network and APIs
   http: ^1.2.2
   app_links: ^6.4.1
   url_launcher: ^6.3.1
-  
-  # Storage and Preferences
   shared_preferences: ^2.3.2
   path_provider: ^2.1.4
 
